fix: align support images

--- a/src/components/Supports/styles.scss
+++ b/src/components/Supports/styles.scss
@@ -5,6 +5,7 @@
   padding: 20px 0;
   display: flex;
   justify-content: space-between;
+  align-flex: center;
   flex-wrap: wrap;
 }
 
